--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -22,7 +22,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  font-size: max(1.6rem);
+  font-size: 2rem ;
   list-style: none;
 }
 a {
